[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
wtransport = { version = "0.6.1" }
tracing = "0.1.41"
anyhow = "1.0.98"
axum = "0.8.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["cors"] }
